--- a/quinzena3/bugfixes/index.css
+++ b/quinzena3/bugfixes/index.css
@@ -19,6 +19,9 @@ h2 {
 input {
   height: 20px;
   width: 500px;
+  border: none;
+  border-bottom: 2px solid black;
+  outline: none;
 }
 
 button:focus {
